<resources>
    <string name="app_name">Pruebas1</string>
    <string name="titulo">Pagina inicial</string>
    <string name="boton1">Operaciones</string>
    <string name="grafico">Grafico</string>
    <string name="maps">Google Maps</string>
    <string name="btnSalir">Salir</string>
    <string name="BTonGrafico">Grafico</string>
    <string name="btnBasededatos">Base de datos</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>